
v0.02.13 (unreleased yet)
- (JKos) added script entity "t" for testing purposes. Located on lower right corner of the 1st level. (see comments from the script)
- (Thomson) added teleporters to levels 4-12 (useful for testing)
- (JKos) Updated LoG Framework to the latest version (includes Xanathars GrimQ library)
- (JKos) New spells: Stoneskin, cone of cold, fireball, lightning bolt, ice storm, haste
- (JKos) All custom monsters, doors and items now work with the framework, so it's now possible to use dynamic hooks with custom assets.
- (JKos) Bug fix: mage leveling above level 15 causes crash
- (Thomson) Added breakable spider nets on level 4 (model by montagneyaya)
- (Thomson) Added slug (as leech) by Wallasaurus
- (Thomson) Integrated files generated by EobConverter 0.6.7:
   - levels 4-12,
   - dummy item definitions for all levels
   - items placed in levels 4-12,
   - monster definitions for all levels
   - monster placed in levels 4-12

v0.02.12 (2012-11-23)
New object - rounded Pit/Ceiling shaft
New low-poly ladder with texture
Spellbook with AD&D spells
Bug fix: alcoves, rations
New spells - testing: ( magic_missile, shield, burning_hands, armor, invisibility, invisibility_10_radius, melfs_acid_arrow, hold_monster )

v0.02.11
New textures for sewer floor
New decorations, floor rocks, pipes
First part of level 3

v0.02.9
Added new 3D model of sewer ladder
Script code cleaning
Texture / Model materials fixing
Minor details, Bug fixes

0.02.8
Completed Level 2
Added Wently's Notes - to deepen atmosphere
Added new item Potion of Giant Strength
Minor details, Lot of Bug fixes

0.02.7
Updated scripts for pits in Level 2
Added throwable portcullis in Level 2
Rockfall sound, dust and shakeCamera at start

0.02.6
Scripts changes with support of function destroy()
First 3 sections of level 2 are ready for testing
Added teleport to level2 in the starting location
SQ1 reward - Guinsoo is now throwing dagger

0.02.5
Introduction added