@@ -6,6 +6,7 @@ import "assets/scripts/standard_assets.lua"
 import "mod_assets/framework/framework.lua"
 fw_loadModule('fw_magic')
 fw_loadModule('add_spells')
+fw_loadModule('illusion_walls')
 -- assets must be imported after the framework, otherwise hooks don't work
 
 -- import assets generated by EobConverter
